force-app/main/default/objects/MPStore__c/MPStore__c.object-meta.xml
<CustomObject>
    <label>Local</label>
    <nameField>
        <label>Local Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>