force-app/main/default/objects/MPStore__c/fields/MPApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>MPApprovalStatus__c</fullName>
    <label>Estado Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Aprobación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>