force-app/main/default/objects/MPStore__c/fields/MPBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>MPBusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad de Negocio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPBusinessType__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Unidad de Negocio</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPBusinessType__c</referenceTo>
    <relationshipLabel>Locales</relationshipLabel>
    <relationshipName>Locales</relationshipName>
    <type>Lookup</type>
</CustomField>