force-app/main/default/objects/MPStore__c/fields/MPCeBe__c.field-meta.xml
<CustomField>
    <fullName>MPCeBe__c</fullName>
    <label>CeBe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>