force-app/main/default/objects/MPStore__c/fields/MPContractType__c.field-meta.xml
<CustomField>
    <fullName>MPContractType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Contrato</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Locales</relationshipLabel>
    <relationshipName>Locales</relationshipName>
    <type>Lookup</type>
</CustomField>