force-app/main/default/objects/MPStore__c/fields/MPExternalCode__c.field-meta.xml
<CustomField>
    <fullName>MPExternalCode__c</fullName>
    <externalId>true</externalId>
    <label>Código externo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>