force-app/main/default/objects/MPStore__c/fields/MPFootage__c.field-meta.xml
<CustomField>
    <fullName>MPFootage__c</fullName>
    <label>Metraje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>