force-app/main/default/objects/MPStore__c/fields/MPSociety__c.field-meta.xml
<CustomField>
    <fullName>MPSociety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sociedad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locales (Sociedad)</relationshipLabel>
    <relationshipName>MPSocietyStores</relationshipName>
    <type>Lookup</type>
</CustomField>