force-app/main/default/objects/MPStore__c/fields/MPStatusOccupation__c.field-meta.xml
<CustomField>
    <fullName>MPStatusOccupation__c</fullName>
    <label>Estado Ocupacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponible</fullName>
            </value>
            <value>
                <fullName>Ocupado Vigente</fullName>
            </value>
            <value>
                <fullName>Ocupado Vencido</fullName>
            </value>
            <value>
                <fullName>Comprometido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>