force-app/main/default/objects/MPStore__c/recordTypes/MPRentalObject.recordType-meta.xml
<RecordType>
    <fullName>MPRentalObject</fullName>
    <active>true</active>
    <label>Objeto de Alquiler</label>
</RecordType>