force-app/main/default/objects/MPStore__c/recordTypes/MPStore.recordType-meta.xml
<RecordType>
    <fullName>MPStore</fullName>
    <active>true</active>
    <label>Local</label>
</RecordType>