force-app/main/default/objects/MPStore__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MPSociety__c</columns>
    <columns>MPMall__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>MPContractType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>