force-app/main/default/objects/MPStore__c/listViews/MPRentalObjects.listView-meta.xml
<ListView>
    <fullName>MPRentalObjects</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MPStore__c.MPRentalObject</value>
    </filters>
    <label>Objetos de Alquiler</label>
</ListView>