force-app/main/default/objects/MPStore__c/listViews/MPStores.listView-meta.xml
<ListView>
    <fullName>MPStores</fullName>
    <columns>NAME</columns>
    <columns>MPSociety__c</columns>
    <columns>MPMall__c</columns>
    <columns>MPContractType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MPStore__c.MPStore</value>
    </filters>
    <label>Locales</label>
</ListView>